--- a/front/style/pages/_citizen-projects.scss
+++ b/front/style/pages/_citizen-projects.scss
@@ -305,8 +305,10 @@
         }
     }
 
-    .committee-follow--anonymous__link {
-        z-index: 5;
+    .committee-follow {
+        &--anonymous__link {
+            z-index: 5;
+        }
     }
 }
 
