--- a/templates/admin/citizen_project/type.html.twig
+++ b/templates/admin/citizen_project/type.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SonataAdminBundle:CRUD:base_list_field.html.twig' %}
 
 {% block field %}
-    {{ object.isFromTurnkeyProject ? 'Projet clé en main' : 'Projet simple' }}
+    {{ object.getTypeOfProject() }}
 {% endblock %}
